# polars-validator

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/polars_validator/: __init__.py  dataframe.py  validator.py
tests/: test_validate_schema.py
