[project]
name = "polars-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "baggiponte", email = "57922983+baggiponte@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
  "ISC001",
  "COM812",
  "PD"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
exclude = [
  ".venv"
]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
